<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_nest_condition_wash_over" />
   </TableRow>
   
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonWashOverDate1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_button" />
        
        <EditText
            android:id="@+id/fieldWashOverStormName1"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
   </TableRow>
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_nest_condition_washout" />
   </TableRow>
   
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonWashOutDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_button" />
        
        <EditText
            android:id="@+id/fieldWashOutStormName"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
   </TableRow>
   
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_nest_condition_predataion" />
   </TableRow>
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonPredationDate1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_button" />
        
        <EditText
            android:id="@+id/fieldPredationNumEggs1"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1" />
        
        <EditText
            android:id="@+id/fieldPredationPredator1"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
   </TableRow>

   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_nest_condition_damage" />
   </TableRow>
   <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_nest_condition_damage_contact_suzi" />
   </TableRow>
   <TableRow
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

       <CheckBox
           android:id="@+id/fieldDamageVandalized"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/edit_nest_condition_damage_vandalized" />
       
       <Button
            android:id="@+id/buttonDamageVandalizedDate1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_button"
            android:enabled="false" />
   </TableRow>
   <TableRow
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

       <CheckBox
           android:id="@+id/fieldDamagePoached"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/edit_nest_condition_damage_poached" />
       
       <Button
            android:id="@+id/buttonDamagePoachedDate1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_button"
            android:enabled="false" />
   </TableRow>
   <TableRow
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

       <CheckBox
           android:id="@+id/fieldDamageRootsInvaded"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/edit_nest_condition_damage_roots_invaded" />
       
       <CheckBox
           android:id="@+id/fieldDamageEggsScattered"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/edit_nest_condition_damage_eggs_scattered" />
   </TableRow>
</TableLayout>
